--- a/src/app/administrador/administrar-tablas/administrar-tablas.component.html
+++ b/src/app/administrador/administrar-tablas/administrar-tablas.component.html
@@ -1,4 +1,4 @@
-<div class="contenedor-tablas" fxLayout="row" fxLayoutAlign="space-around"> 
+<div class="contenedor-tablas" fxLayout="row" fxLayoutAlign="space-around"  fxLayout.sm="column" fxLayout.xs="column"> 
     
     <div class="separador-tablas" >
         <div fxLayoutAlign="center"><h1 class="titulo">Categorias</h1></div>
