--- a/src/app/administrador/administrar-usuarios/administrar-usuarios.component.css
+++ b/src/app/administrador/administrar-usuarios/administrar-usuarios.component.css
@@ -54,3 +54,9 @@ td{
     background-color: #33bbd1;
     color: white;
 }
+@media(max-width:767px){
+    .titulo{
+        font-size: 30px;
+    }
+
+}
